[package]
name = "bevy_replicon_renet"
version = "0.9.0"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "koe <ukoe@protonmail.com>",
]
edition = "2024"
description = "Integration with renet for bevy_replicon"
readme = "README.md"
repository = "https://github.com/projectharmonia/bevy_replicon_renet"
keywords = [
  "bevy",
  "multiplayer",
  "netcode",
  "replication",
  "server-authoritative",
]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
include = ["/src", "/tests", "/examples", "LICENSE*"]

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[dependencies]
bevy_replicon = { version = "0.33", default-features = false }
bevy_renet = { git = "https://github.com/redjack96/renet", default-features = false }
bevy = { version = "0.16", default-features = false, features = ["bevy_log"]}

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "bevy_gizmos",
  "bevy_state",
  "bevy_text",
  "bevy_ui_picking_backend",
  "bevy_ui",
  "bevy_window",
  "default_font",
  "serialize",
  "x11",
] }
test-log = "0.2"
serde = "1.0"
clap = { version = "4.1", features = ["derive"] }

[features]
default = ["client", "server", "renet_netcode"]
server = ["bevy_replicon/server"]
client = ["bevy_replicon/client"]

# Re-exports of renet features
renet_netcode = ["bevy_renet/netcode"]
renet_steam = ["bevy_renet/steam"]

[[test]]
name = "netcode"
required-features = ["server", "client", "renet_netcode"]

[[example]]
name = "simple_box"
required-features = ["server", "client", "renet_netcode"]

[[example]]
name = "tic_tac_toe"
required-features = ["server", "client", "renet_netcode"]
